--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,4 +8,10 @@
     <string name="creatingUser">계정을 생성하고 있습니다.</string>
     <string name="loadingChatRooms">채팅방을 불러오는 중입니다.</string>
     <string name="writeMessage">메시지를 입력하세요.</string>
+    <string name="cannotFindUser">사용자를 찾을 수 없습니다.</string>
+    <string name="chatRoomCreated">채팅방을 만들었습니다.</string>
+    <string name="cannotCreateChatRoom">채팅방을 만들 수 없습니다.</string>
+    <string name="newChatRoom">새로운 채팅</string>
+    <string name="signOut">로그아웃</string>
+    <string name="unknownUser">알 수 없는 사용자</string>
 </resources>
