--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -14,4 +14,6 @@
     <string name="newChatRoom">새로운 채팅</string>
     <string name="signOut">로그아웃</string>
     <string name="unknownUser">알 수 없는 사용자</string>
+    <string name="unknownMessage">알 수 없는 메시지</string>
+    <string name="avatar">아바타</string>
 </resources>
