--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="cannotCreateChatRoom">Cannot Create Chat Room</string>
     <string name="newChatRoom">New Chat</string>
     <string name="signOut">signOut</string>
-    <string name="unknownUser">알 수 없는 사용자</string>
+    <string name="unknownUser">Unknown Message</string>
+    <string name="unknownMessage">Unknown Message</string>
+    <string name="avatar">Avatar</string>
 </resources>
