--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -16,4 +16,5 @@
     <string name="unknownUser">알 수 없는 사용자</string>
     <string name="unknownMessage">알 수 없는 메시지</string>
     <string name="avatar">아바타</string>
+    <string name="unknownTime">알 수 없는 시각</string>
 </resources>
