--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="unknownUser">Unknown Message</string>
     <string name="unknownMessage">Unknown Message</string>
     <string name="avatar">Avatar</string>
+    <string name="unknownTime">Unknown Time</string>
 </resources>
