--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="MIDDLE_DOT">\u00B7</string>
     <string name="app_name">도란도란</string>
 
     <string name="loginSuccess">로그인에 성공하였습니다.</string>
@@ -17,4 +18,5 @@
     <string name="unknownMessage">알 수 없는 메시지</string>
     <string name="avatar">아바타</string>
     <string name="unknownTime">알 수 없는 시각</string>
+    <string name="messageSeen">읽음</string>
 </resources>
