--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="MIDDLE_DOT">\u00B7</string>
+    <string name="new_message_notification_channel_id">3372</string>
+    <string name="new_message_notification_channel_name">새 메시지</string>
+
     <string name="app_name">Dorandoran</string>
 
     <string name="loginFailed">Login Failed</string>
