--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -22,4 +22,8 @@
     <string name="avatar">아바타</string>
     <string name="unknownTime">알 수 없는 시각</string>
     <string name="messageSeen">읽음</string>
+    <string name="selectAction">수행할 작업을 선택하세요.</string>
+    <string name="copy">복사</string>
+    <string name="copied">복사되었습니다.</string>
+    <string name="message">메시지</string>
 </resources>
