--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -33,4 +33,5 @@
     <string name="send_message">메시지 전송</string>
     <string name="loadingEmoticons">이모티콘 로딩중</string>
     <string name="emoticon">이모티콘</string>
+    <string name="installNewVersion">플레이스토어에서 최신 버전을 설치해주세요. 5초 뒤 애플리케이션이 종료됩니다.</string>
 </resources>
