--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="send_message">Send Message</string>
     <string name="loadingEmoticons">Loading Emoticons</string>
     <string name="emoticon">Emoticon</string>
+    <string name="installNewVersion">Please install latest version from Google Play Store. Application will be closed in 5 seconds.</string>
 </resources>
