--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -34,4 +34,9 @@
     <string name="loadingEmoticons">이모티콘 로딩중</string>
     <string name="emoticon">이모티콘</string>
     <string name="installNewVersion">플레이스토어에서 최신 버전을 설치해주세요. 5초 뒤 애플리케이션이 종료됩니다.</string>
+    <string name="pleaseUpdate">구글 플레이 스토어에서 최신 버전으로 업데이트 해주세요.</string>
+    <string name="update">업데이트</string>
+    <string name="noThanks">나가기</string>
+    <string name="enterOtherUserEmail">상대방의 이메일 주소를 입력하세요.</string>
+    <string name="newVersionAvailable">새 버전이 있습니다.</string>
 </resources>
